# daypy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
example/: 1.py
src/daypy/: __init__.py  constant.py  parse.py  utils.py
src/daypy/plugins/: __init__.py  array_support.py  dict_support.py  human.py  is_leap_year.py  of.py  to.py  to_array.py  zh_support.py
tests/: test_get-set.py  test_instance.py
tests/test_plugins/: test_array_support.py  test_dict_support.py  test_human.py  test_is_leap_year.py  test_of.py  test_to.py  test_zh_support.py
